--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,21 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 # Dependencies
 node_modules
 
-# Build output
+# Build
 dist
 dist-ssr
-*.local
 
-# Environment variables (CRITICAL - contains secrets!)
+# Env files
 .env
-.env.local
-.env.*.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
-# Docker
-docker-compose.override.yml
-.dockerignore
+# Logs
+*.log
 
-# Testing
-coverage
-*.coverage
-.nyc_output
-
-# Cache
-.cache
-.parcel-cache
-.eslintcache
-
-# OS files
+# OS
 .DS_Store
-Thumbs.db
 
-# Editor directories and files
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-*.swp
-*~
-
-# Optional
-.npmrc
